Fixed unreadable "Admin Only" box colors when there's a dark background.

--- a/assets/stylesheets/directoryopus.scss
+++ b/assets/stylesheets/directoryopus.scss
@@ -327,8 +327,8 @@
 	}
 	.directoryopus-link-admin {
 		border: 2px solid red;
-		background-color: rgba(255, 0, 0, 0.05);
-		color: black;
+		background-color: rgb(90, 0, 0);
+		color: rgb(200, 200, 200);
 		padding: 1em;
 		margin: 1em;
 		display: inline-block;
